# UNNCLang-Intepreter

./: README.md  demo.py  demo.uncl  pyproject.toml  run_demo.py
.github/workflows/: publish.yml
docs/: EXTENDING.md
scripts/: bump_version.py
src/unnclang/: __init__.py  cli.py  registry.py  runner.py
src/unnclang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/unnclang/macros/: __init__.py  core.py
tests/: test_macros.py
